made new changes in new css file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="main.css">
     <link rel="stylesheet" type="text/css" href="responsive.css">
+    <link rel="stylesheet" type="text/css" href="melissa.css">
   </head>
   <body>
 
@@ -130,13 +131,8 @@
           <span class="weather__location">Brighton, UK</span>
           <span class="weather__desc">Sunny</span>
           <span class="weather__today">
-          
-          <picture>
-            <source media="(max-width: 700px)" srcset="images/weather-2.png, images/weather.png 2x">
-            <img src="images/weather-2.png" srcset="images/weather.png" alt="icon of a partially cloudy day">
-          </picture>
+            <img  class="weather__today__image" src="images/weather.png" alt="icon of a partially cloudy day" />
           <span class="weather__today__temp">13</span><span class="weather__today__deg">&deg;C</span>
-
           </span>
           <ul class="weather__next">
             <li class="weather__next__item">
